# castle

./: Cargo.toml
app/: Cargo.toml  README.md  index.html  package.json
app/src/: App.tsx  index.tsx  lib.rs  store.ts  types.ts
app/src/actions/: note.ts
app/src/components/: ExampleComponent.tsx  mod.rs  note_editor.rs
app/src/components/ListNotes/: index.tsx
app/src/components/NoteEditor/: EditChecklistNote.tsx  EditTextNote.tsx  index.tsx
app/src/pages/: Home.tsx
app/src/reducers/: index.ts  newNote.ts  notes.ts
app/src/server/: Container.tsx  index.tsx
app/test/: README.md
cli/: Cargo.toml  test-db.json
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/dao/note/: events.rs  mod.rs
core/src/storage/: file.rs  mod.rs
event-sauce/src/: db_event.rs  event.rs  event_builder.rs  lib.rs
playground/: Cargo.toml
