[package]
name = "app"
version = "0.1.0"
authors = ["Yew App Developer <name@example.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.14.3", features = ["web_sys"] }
wasm-bindgen = "0.2.60"
console_error_panic_hook = "0.1.6"
log = "0.4.8"
console_log = "0.1.2"
