[package]
name = "playground"
version = "0.1.0"
authors = ["James Waples <james@wapl.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diff = "0.1.12"
pulldown-cmark = { version = "0.8", default-features = false }
